--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromFile.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromFile.html
@@ -20,57 +20,61 @@
             </div>
             <br />
             <div data-bind="with: model">
-                <div class="flex-horizontal flex-stretch-items">
-                    <div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-5 col-lg-3">
                         <div class="toggle">
-                            <input id="import_database_record" type="checkbox" data-bind="checked: includeDatabaseRecord">
-                            <label for="import_database_record">Include Database Record</label>
-                        </div>
-                        <div class="toggle">
-                            <input id="import_documents" type="checkbox" data-bind="checked: includeDocuments">
-                            <label for="import_documents">Include Documents</label>
-                        </div>
-                        <div class="toggle">
-                            <input id="import_conflicts" type="checkbox" data-bind="checked: includeConflicts">
-                            <label for="import_conflicts">Include Conflicts</label>
+                            <input id="importDocuments" type="checkbox" data-bind="checked: includeDocuments">
+                            <label for="importDocuments">Include Documents</label>
                         </div>
                         <div class="toggle" data-toggle="tooltip" data-placement="top">
-                            <input id="import_revisions" type="checkbox" data-bind="checked: includeRevisionDocuments"/>
-                            <label for="import_revisions">Include Document Revisions</label>
+                            <input id="importRevisions" type="checkbox" data-bind="checked: includeRevisionDocuments"/>
+                            <label for="importRevisions">Include Revisions</label>
                         </div>
                         <div class="toggle">
-                            <input id="import_identities" type="checkbox" data-bind="checked: includeIdentities">
-                            <label for="import_identities">Include Identities</label>
+                            <input id="importIndexes" type="checkbox" data-bind="checked: includeIndexes">
+                            <label for="importIndexes">Include Indexes</label>
                         </div>
                         <div class="toggle">
-                            <input id="import_cmp_xch" type="checkbox" data-bind="checked: includeCompareExchange">
-                            <label for="import_cmp_xch">Include Compare Exchange</label>
+                            <input id="importIdentities" type="checkbox" data-bind="checked: includeIdentities">
+                            <label for="importIdentities">Include Identities</label>
                         </div>
                         <div class="toggle">
-                            <input id="import_counters" type="checkbox" data-bind="checked: includeCounters">
-                            <label for="import_counters">Include Counters</label>
+                            <input id="importConfiguration" type="checkbox" data-bind="checked: includeDatabaseRecord">
+                            <label for="importConfiguration">Include Configuration</label>
+                            <small id="configurationPopover"><i class="icon-info text-info"></i></small>
                         </div>
-
+                    </div>
+                    <div class="col-xs-12 col-sm-5 col-lg-4">
+                        <div class="toggle">
+                            <input id="importCounters" type="checkbox" data-bind="checked: includeCounters">
+                            <label for="importCounters">Include Counters</label>
+                        </div>
+                        <div class="toggle">
+                            <input id="importCmpXch" type="checkbox" data-bind="checked: includeCompareExchange">
+                            <label for="importCmpXch">Include Compare Exchange</label>
+                        </div>
+                        <div class="toggle">
+                            <input id="importConflicts" type="checkbox" data-bind="checked: includeConflicts">
+                            <label for="importConflicts">Include Conflicts</label>
+                        </div>
+                        <div class="toggle">
+                            <input id="importAnalyzers" type="checkbox" data-bind="checked: removeAnalyzers">
+                            <label for="importAnalyzers">Remove Analyzers</label>
+                        </div>
+                        <div class="toggle">
+                            <input id="importLegacyAttachments" type="checkbox" data-bind="checked: includeLegacyAttachments">
+                            <label for="importLegacyAttachments">Include Legacy Attachments</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
                         <div data-bind="validationElement: importDefinitionHasIncludes">
                             <div class="help-block" data-bind="validationMessage: importDefinitionHasIncludes"></div>
                         </div>
                     </div>
-                    <div>
-                        <div class="toggle">
-                            <input id="import_indexes" type="checkbox" data-bind="checked: includeIndexes">
-                            <label for="import_indexes">Include Indexes</label>
-                        </div>
-                        <div class="toggle">
-                            <input id="import_remove_analyzers" type="checkbox" data-bind="checked: removeAnalyzers">
-                            <label for="import_remove_analyzers">Remove Analyzers</label>
-                        </div>
-                        <div class="toggle">
-                            <input id="import_legacy_attachments" type="checkbox" data-bind="checked: includeLegacyAttachments">
-                            <label for="import_legacy_attachments">Include Legacy Attachments</label>
-                        </div>
-                    </div>
                 </div>
-            </div>
+            </div>            
             <br />
             <div data-bind="collapse: showAdvancedOptions, with: model">
                 <!-- TODO: see issue 8493 ! -->
@@ -84,7 +88,7 @@
                     <div class="toggle">
                         <input id="useTransformScript" type="checkbox" data-bind="checked: $root.showTransformScript">
                         <label for="useTransformScript" class="use-transform-script">Use Transform script </label>
-                        <small class="scriptPopover"><i class="icon-info text-info"></i></small>
+                        <small id="scriptPopover"><i class="icon-info text-info"></i></small>
                     </div>
                     <div data-bind="collapse: $root.showTransformScript">
                         <pre class="form-control" style="height: 200px;" data-bind="aceEditor: { code: transformScript, lang: 'ace/mode/javascript', completer: $root.completer }, validationOptions: { errorsAsTitle: false }, validationElement: transformScript"></pre>
