--- a/src/Raven.Studio/wwwroot/Content/css/pages/about.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/about.less
@@ -13,6 +13,14 @@
         padding: 6px 9px;
     }
 
+    .big-button {
+        white-space: normal;
+
+        small {
+            max-width: 185px;
+        }
+    }
+
     .big-label, .big-button {
         display: flex;
         text-align: left;
@@ -71,10 +79,10 @@
         align-items: stretch;
         flex-grow: 1;
         flex-wrap: wrap;
-        
+
         &.no-license {
             align-items: start;
-            
+
             .support-properties {
                 display: none;
             }
