--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables.less
@@ -20,23 +20,23 @@
 // PRIMARY #ca1c59  - linki tesktowe: #e33572
 
 @brand-primary-dark:    #b21557;
-@brand-primary:         #d7325a; //#ee3442; // #ff7f66; //#ee3442;
+@brand-primary:         #d7325a; 
 @brand-primary-light:   #ff6482;
 
-@brand-success-dark:    #60942c;//#5d933b;
-@brand-success:         #69cc29;
+@brand-success-dark:    #60942c;
+@brand-success:         @color-3; //#69cc29;
 @brand-success-light:   #a7ed76;
 
 @brand-info-dark:       #1773b5;
-@brand-info:            #20adf3;// #45a0ff;
+@brand-info:            @color-4; //#20adf3;
 @brand-info-light:      #61caff;
 
 @brand-warning-dark:    #e3a72d;
-@brand-warning:         #ffda47;
+@brand-warning:         @color-2; //#ffda47;
 @brand-warning-light:   #ffee7d;
 
-@brand-danger-dark:     #b32424; //#793233;
-@brand-danger:          #ff4943;
+@brand-danger-dark:     #b32424;
+@brand-danger:          @color-1; //#ff4943;
 @brand-danger-light:    #ff624d;
 
 @color-1: #f06582;
@@ -81,9 +81,9 @@
 @text-color:            @gray-light;
 
 //** Global textual link color.
-@link-color:            @link-color;
+//@link-color:            @link-color;
 //** Link hover color set via `darken()` function.
-@link-hover-color:      @link-hover-color;
+//@link-hover-color:      @link-hover-color;
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
