RavenDB-11594 Add Use Experimental Features check-box in the setup wizard

--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/additionalSourceSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/additionalSourceSyntax.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-footer text-left bg-info flex-horizontal">
+        <div class="modal-footer text-left bg-experimental flex-horizontal">
             <div class="flex-start"><i class="icon-experimental"></i></div>
             <div>
                 Note: The JavaScript index is an experimental feature.<br/>
