--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/mapIndexSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/mapIndexSyntax.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="modal-footer text-left">
-            <div class="text-info bg-info padding flex-horizontal">
+            <div class="bg-experimental padding flex-horizontal">
                 <div class="flex-start"><i class="icon-experimental"></i></div>
                 <div>
                     Note: The JavaScript index is an experimental feature.<br/>
