--- a/src/Raven.Studio/wwwroot/App/views/wizard/welcome.html
+++ b/src/Raven.Studio/wwwroot/App/views/wizard/welcome.html
@@ -90,7 +90,7 @@ Let's start with choosing your desired level of security. Select the security op
     </div>
 </div>
 
-<div class="bg-warning padding flex-horizontal margin-top">
+<div class="bg-experimental padding flex-horizontal margin-top">
     <div class="margin-right">
         <i class="icon-experimental icon-lg"></i>
     </div>
