--- a/src/Raven.Studio/wwwroot/App/views/database/settings/revisions.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/revisions.html
@@ -1,4 +1,4 @@
-<form role="form" class="revisions flex-vertical absolute-fill content-margin" data-bind="submit: saveChanges">
+<form role="form" class="revisions flex-vertical absolute-fill content-margin" data-bind="submit: saveChanges" novalidate>
     <div class="flex-header">
         <div class="clearfix toolbar">
             <div class="pull-left">
