RavenDB-10331 Fix Review Comments

--- a/src/Raven.Studio/wwwroot/App/views/database/settings/clientConfiguration.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/clientConfiguration.html
@@ -58,7 +58,7 @@
                     <div class="row flex-row row-sm">
                         <div class="col-sm-5">
                             <div class="checkbox">
-                                <input id="checkboxMaxRequests" class="styled" type="checkbox" 
+                                <input id="checkboxMaxRequests" class="styled" type="checkbox" min="0"
                                        data-bind="checked: model.isDefined, checkedValue: 'maxNumberOfRequestsPerSession', enable: canEditSettings, validationElement: model.maxNumberOfRequestsPerSession">
                                 <label for="checkboxMaxRequests">
                                     Maximum number of requests per session
