--- a/src/Raven.Studio/wwwroot/App/views/database/settings/revisions.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/revisions.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="toggle-margin" data-bind="collapse: limitRevisions, validationElement: minimumRevisionsToKeep">
                     <small>Minimum revisions to keep</small>
-                    <input type="number" class="form-control" placeholder="0" data-bind="numericInput: minimumRevisionsToKeep" />
+                    <input type="number" min="0" class="form-control" placeholder="0" data-bind="numericInput: minimumRevisionsToKeep" />
                 </div>
                 <div class="toggle toggle-primary">
                     <input id="limitRevisionsByAge" class="styled" type="checkbox" data-bind="checked: limitRevisionsByAge">
